# MarchingCubes

./: .gitignore  NOTES.md  README.md  format.sh  justfile  main.cpp  meson.build  renderdoc_terrain.cap  setup.sh
.zed/: debug.json
MarchingCubes.xcodeproj/: project.pbxproj
MarchingCubes.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
MarchingCubes.xcodeproj/xcshareddata/xcschemes/: MarchingCubes.xcscheme  Tests.xcscheme
Tests/: Tests.mm
demo/: cubemap_blur.cpp  cubemap_blur.hpp  demos.hpp  main.cpp  meson.build
demos/: meson.build
demos/common/: cubemap_blur.cpp  cubemap_blur.hpp  post_processing_filters.cpp  post_processing_filters.hpp  post_processing_stack.cpp  post_processing_stack.hpp  xorshift.hpp
demos/hello_mc/: demos.hpp  main.cpp  meson.build
demos/terrain/: FastNoise.cpp  FastNoise.h  camera.hpp  filters.hpp  main.cpp  materials.hpp  meson.build  perlin_noise.hpp  spring.hpp  terrain.cpp  terrain.hpp  terrain_chunk.cpp  terrain_chunk.hpp  terrain_samplers.hpp  terrain_segment.hpp  xorshift.hpp
include/imgui/: imconfig.h
mc/: lines.hpp  marching_cubes.cpp  marching_cubes.hpp  marching_cubes_detail.hpp  meson.build  thread_pool.hpp  triangle_consumer.hpp  triangle_soup.cpp  triangle_soup.hpp  unowned_ptr.hpp  util.cpp  util.hpp  volume.cpp  volume.hpp  volume_samplers.hpp
mc/util/: aabb.hpp  color.cpp  color.hpp  fps_calc.hpp  io.cpp  io.hpp  lines.hpp  op_queue.cpp  op_queue.hpp  storage.cpp  storage.hpp  thread_pool.hpp  unowned_ptr.hpp  util.hpp
shaders/gl/: composite.glsl  composite_frag.glsl  composite_vert.glsl  cubemap_blur.glsl  cubemap_blur_frag.glsl  frag.glsl  line.glsl  line_frag.glsl  line_vert.glsl  sky.glsl  skydome.glsl  skydome_frag.glsl  skydome_vert.glsl  terrain.glsl  terrain_frag.glsl  terrain_vert.glsl  vert.glsl  volume.glsl  volume_frag.glsl  volume_vert.glsl
shaders/gl/postprocessing/: atmosphere.glsl  bad_tv.glsl  fog_plane.glsl  grayscale.glsl  palettize_hsv.glsl  palettize_rgb.glsl  palettize_yuv.glsl  pixelate.glsl
src/: aabb.hpp  lines.hpp  main.cpp  marching_cubes.cpp  marching_cubes.hpp  marching_cubes_detail.hpp  storage.cpp  storage.hpp  thread_pool.hpp  triangle_soup.cpp  triangle_soup.hpp  util.cpp  util.h  util.hpp  volume.cpp  volume.hpp  volume_samplers.hpp
tests/unit/: meson.build  test_octree.cpp  test_samplers.cpp  tests.cpp
textures/: axes-2.png-autosave.kra  axes.png-autosave.kra
